# forensics

./: CRASH_FIXES.md  DATABASE_FIX.md  FRONTEND_FEATURES.md  IDEA_THEME_SUMMARY.md  README.md  USAGE.md  _theme-colors.scss  angular.json  claude.md  package-lock.json  package.json  pnpm-lock.yaml
.claude/: ARCHITECTURE.md  CLAUDE_CODE_PROMPT.md  CODEBASE_ANALYSIS_PLAN.md  CONTEXT_EXPLORATION.md  HOW_TO_USE_PROMPT.md  INDEX_ARCHITECTURE.md  KEYBOARD_SHORTCUTS.md  SPLIT_VIEW_GUIDE.md  XML_AND_VIEWER_OVERRIDE.md
src/: App.tsx  custom-theme.scss  index.css  styles.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: auxiliary.rs  commands.rs  mod.rs
src-tauri/src/index/: archive_extractor.rs  archive_settings.rs  detector.rs  image_preview.rs  indexer.rs  inverted.rs  mod.rs  query.rs  schema.rs  watcher.rs
src-tauri/src/index/extractors/: csv_extractor.rs  excel.rs  indexeddb.rs  json.rs  leveldb.rs  mod.rs  sqlite.rs  text.rs  xml.rs
src-tauri/src/io/: commands.rs  error.rs  fs.rs  local.rs  mod.rs  types.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts  filesize-pipe.ts
src/app/components/: README.md  index.ts
src/app/home/: home.css
src/app/models/: layout.models.ts
src/components/analysis/: DataChart.tsx  DatabaseViewer.tsx  GroupManager.tsx  Timeline.tsx
src/components/dialogs/: DirectoryScanDialog.tsx  IndexingModal.tsx
src/components/editor/: CodeEditor.tsx
src/components/layout/: EditorPane.tsx  FileTree.tsx  MainLayout.tsx  Sidebar.tsx  SplitLayout.tsx  SplitLayoutEnhanced.tsx  StatusBar.tsx  (+2 more)
src/hooks/: useDataContextMenu.ts  useFileSystem.ts  useFileSystemWithPanes.ts  useKeyboardShortcuts.ts
src/lib/: dataUtils.ts  fileIcons.tsx  pathUtils.ts  tauri.ts  utils.ts
src/types/: index.ts
(+35 files in other folders)
