[package]
name = "forensincs"
version = "0.1.0"
description = "Forensic tool"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "detective_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Parallelization
rayon = "1.11.0"

# Error handling
thiserror = "2"
anyhow = "1"

# Hashing and crypto
sha2 = "0.10"
md-5 = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Embedded database
sled = "0.34"
bincode = "1.3"

# Directory handling
directories = "5.0"
tempfile = "3.23.0"

# Future S3 support (optional)
# aws-sdk-s3 = { version = "1", optional = true }
log = "0.4"
glob-match = "0.2.1"

# Indexing and search
tantivy = "0.22"
hex = "0.4"
parking_lot = "0.12"

# File format parsing
rusqlite = "0.32"
csv = "1.3"
calamine = "0.26"  # Excel files
quick-xml = "0.37"

# Archive handling
zip = "2.2"
tar = "0.4"
flate2 = "1.0"
sevenz-rust = "0.6"

# Image processing
image = "0.25"
webp = "0.3"
uuid = { version = "1.18.1", features = ["v4"] }

# Note: LevelDB/IndexedDB parsing is done through file inspection
# Full LevelDB support can be added later with proper integration
